--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<p class="text-slate-800/60 font-medium text-xs mb-0.5">
 				manage all your to-dos in one place.
 			</p>
-			<span id="uuid" class="text-[10px] font-medium text-zinc-600">sdfsdf</span>
+			<span id="uuid" class="text-[10px] font-medium text-zinc-600">Jaehui Park</span>
 		</header>
 		<main class="flex gap-y-6 flex-col items-center">
 			<nav>
